@@ -31,6 +31,7 @@ import org.apache.servicecomb.core.transport.TransportManager;
 import org.apache.servicecomb.foundation.test.scaffolding.config.ArchaiusUtils;
 import org.apache.servicecomb.registry.DiscoveryManager;
 import org.apache.servicecomb.registry.discovery.DiscoveryTree;
+import org.apache.servicecomb.registry.discovery.TelnetInstancePing;
 import org.apache.servicecomb.swagger.invocation.AsyncResponse;
 import org.apache.servicecomb.swagger.invocation.Response;
 import org.junit.After;
@@ -101,7 +102,8 @@ public class TestLoadBalanceFilter {
     extensionsFactories.add(new RuleNameExtentionsFactory());
     ExtensionsManager extensionsManager = new ExtensionsManager(extensionsFactories);
 
-    DiscoveryTree discoveryTree = new DiscoveryTree(new DiscoveryManager(Collections.emptyList()));
+    DiscoveryTree discoveryTree = new DiscoveryTree(
+        new DiscoveryManager(Collections.emptyList(), List.of(new TelnetInstancePing())));
     handler = new LoadBalanceFilter(new ExtensionsManager(new ArrayList<>()),
         discoveryTree);
     loadBalancerMap = Deencapsulation.getField(handler, "loadBalancerMap");
